--- a/Pokemon_detect.ipynb
+++ b/Pokemon_detect.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "def show_pikachu(img, det):\r\n",
     "    labels = [\"pikachu\"]\r\n",
-    "    img = Image.fromarray(img)\r\n",
+    "    img = Image.fromarray(img[...,::-1])\r\n",
     "    draw = ImageDraw.Draw(img)\r\n",
     "    font_size = max(round(max(img.size)/40), 12)\r\n",
     "    font = ImageFont.truetype(cwd + \"/yolov5_stable/fonts/times.ttf\")\r\n",
